# Reduced-Order-Modelling-SL

./: .gitignore  AUDIT.md  CLAUDE.md  PLAN.md  THEORY.md  engines.py  plot_spectrograms.py  replicate_sampedro_2d_fi.py  replicate_sampedro_3d_fd.py  room_geometry.py  unified_sim.py  validate_fom.py
colab_reproduce/: rbm_acoustics.py  reproduce_sampedro2022.ipynb
docs/: architecture.md  axial_mode_spec.md  gpu_quickstart.md  improvement_plan.md  research_references.md  signal_chain.md
engine/: build.bat  build_rt.bat  build_skp.bat  eigensolve.exp  eigensolve.lib
results/: ard_test_room.json  ard_test_verification.json  bras_3engine_final.json  bras_3engine_level_matched.json  bras_cr2_300k.json  bras_cr2_benchmark.json  bras_cr2_best.json  bras_cr2_complex_geo.json  bras_cr2_correct_materials.json  bras_cr2_diffuse_field.json  bras_cr2_final.json  bras_cr2_freq_dep_alpha.json  bras_cr2_gpu_fine_diffuse.json  bras_cr2_hex_p4.json  bras_cr2_hybrid_best.json  bras_cr2_hybrid_calibrated.json  bras_cr2_hybrid_final.json  bras_cr2_hybrid_ism.json  bras_cr2_hybrid_ism_eyring.json  bras_cr2_hybrid_ism_v2.json  (+46 more)
romacoustics/: ARCHITECTURE.md  CHORAS_INTEGRATION.md  README.md  kaggle_validation.ipynb  pyproject.toml  validate_bras.py  validate_bras_ifft.py  validate_bras_v2.py
romacoustics/romacoustics/: __init__.py  choras_interface.py  fdtd.py  ir.py  materials.py  metrics.py  room.py  sem.py  solver.py  unstructured.py
romacoustics/romacoustics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
romacoustics/validation_bras/: bras_report.json  bras_simulated.npz
romacoustics/validation_bras_gmsh/: bras_scene9.msh
romacoustics/validation_bras_ifft/: sim.npz
romacoustics/validation_bras_v2/: sim.npz
solver_core/: CMakeLists.txt  build.bat  build_umfpack.bat  helmholtz.exp  helmholtz.h  helmholtz.lib  helmholtz_gpu.cu  helmholtz_py.py  helmholtz_umfpack.c
(+63 files in other folders)
