[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "romacoustics"
version = "0.1.0"
description = "Reduced Order Modelling for Room Acoustics — Laplace-domain RBM"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["numpy", "scipy", "matplotlib"]

[project.urls]
Homepage = "https://github.com/Burhanuddin98/Reduced-Order-Modelling-SL"
